MiniPython/app/generated/miniPythonParser.js
// Generated from C:/Users/Sarah/Documents/Proyecto3CompiladoresRaquelySarah/MiniPython\miniPythonParser.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var miniPythonParserListener = require('./miniPythonParserListener').miniPythonParserListener;
var miniPythonParserVisitor = require('./miniPythonParserVisitor').miniPythonParserVisitor;

var grammarFileName = "miniPythonParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, "'def'", "'len'", "'if'", "'for'", 
                     "'in'", "'else'", "'while'", "'return'", "'print'", 
                     "'int'", null, "'='", "','", "'=='", "'('", "')'", 
                     "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "':'", "'['", 
                     "']'", "'<='", "'>='", "'_'" ];

var symbolicNames = [ null, "INDENT", "DEDENT", "DEF", "LEN", "IF", "FOR", 
                      "IN", "ELSE", "WHILE", "RETURN", "PRINT", "INT", "NEWLINE", 
                      "IGUAL", "COMA", "COMP", "PIZQ", "PDER", "SUMA", "RESTA", 
                      "MUL", "DIV", "MAYOR", "MENOR", "DOSPUNTOS", "PCABRIR", 
                      "PCCERRAR", "MENORIGUAL", "MAYORIGUAL", "GUIONBAJO", 
                      "ID", "INTEGER", "STRING", "COMENTARIOCORTO", "COMENTARIOMULTILINEA", 
                      "WS" ];

var ruleNames =  [ "program", "statement", "defStatement", "argList", "ifStatement", 
                   "whileStatement", "forStatement", "returnStatement", 
                   "printStatement", "assignStatement", "functionCallStatement", 
                   "fceEnding", "expressionStatement", "sequence", "moreStatements", 
                   "expression", "comparison", "additionExpression", "additionFactor", 
                   "multiplicationExpression", "multiplicationFactor", "elementExpression", 
                   "elementAccess", "functionCallExpression", "expressionList", 
                   "moreExpressions", "primitiveExpression", "listExpression", 
                   "multOperator", "additionOperator", "logicOperator" ];

function miniPythonParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

miniPythonParser.prototype = Object.create(antlr4.Parser.prototype);
miniPythonParser.prototype.constructor = miniPythonParser;

Object.defineProperty(miniPythonParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

miniPythonParser.EOF = antlr4.Token.EOF;
miniPythonParser.INDENT = 1;
miniPythonParser.DEDENT = 2;
miniPythonParser.DEF = 3;
miniPythonParser.LEN = 4;
miniPythonParser.IF = 5;
miniPythonParser.FOR = 6;
miniPythonParser.IN = 7;
miniPythonParser.ELSE = 8;
miniPythonParser.WHILE = 9;
miniPythonParser.RETURN = 10;
miniPythonParser.PRINT = 11;
miniPythonParser.INT = 12;
miniPythonParser.NEWLINE = 13;
miniPythonParser.IGUAL = 14;
miniPythonParser.COMA = 15;
miniPythonParser.COMP = 16;
miniPythonParser.PIZQ = 17;
miniPythonParser.PDER = 18;
miniPythonParser.SUMA = 19;
miniPythonParser.RESTA = 20;
miniPythonParser.MUL = 21;
miniPythonParser.DIV = 22;
miniPythonParser.MAYOR = 23;
miniPythonParser.MENOR = 24;
miniPythonParser.DOSPUNTOS = 25;
miniPythonParser.PCABRIR = 26;
miniPythonParser.PCCERRAR = 27;
miniPythonParser.MENORIGUAL = 28;
miniPythonParser.MAYORIGUAL = 29;
miniPythonParser.GUIONBAJO = 30;
miniPythonParser.ID = 31;
miniPythonParser.INTEGER = 32;
miniPythonParser.STRING = 33;
miniPythonParser.COMENTARIOCORTO = 34;
miniPythonParser.COMENTARIOMULTILINEA = 35;
miniPythonParser.WS = 36;

miniPythonParser.RULE_program = 0;
miniPythonParser.RULE_statement = 1;
miniPythonParser.RULE_defStatement = 2;
miniPythonParser.RULE_argList = 3;
miniPythonParser.RULE_ifStatement = 4;
miniPythonParser.RULE_whileStatement = 5;
miniPythonParser.RULE_forStatement = 6;
miniPythonParser.RULE_returnStatement = 7;
miniPythonParser.RULE_printStatement = 8;
miniPythonParser.RULE_assignStatement = 9;
miniPythonParser.RULE_functionCallStatement = 10;
miniPythonParser.RULE_fceEnding = 11;
miniPythonParser.RULE_expressionStatement = 12;
miniPythonParser.RULE_sequence = 13;
miniPythonParser.RULE_moreStatements = 14;
miniPythonParser.RULE_expression = 15;
miniPythonParser.RULE_comparison = 16;
miniPythonParser.RULE_additionExpression = 17;
miniPythonParser.RULE_additionFactor = 18;
miniPythonParser.RULE_multiplicationExpression = 19;
miniPythonParser.RULE_multiplicationFactor = 20;
miniPythonParser.RULE_elementExpression = 21;
miniPythonParser.RULE_elementAccess = 22;
miniPythonParser.RULE_functionCallExpression = 23;
miniPythonParser.RULE_expressionList = 24;
miniPythonParser.RULE_moreExpressions = 25;
miniPythonParser.RULE_primitiveExpression = 26;
miniPythonParser.RULE_listExpression = 27;
miniPythonParser.RULE_multOperator = 28;
miniPythonParser.RULE_additionOperator = 29;
miniPythonParser.RULE_logicOperator = 30;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniPythonParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;


 
ProgramContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function Program_ASTContext(parser, ctx) {
	ProgramContext.call(this, parser);
    ProgramContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Program_ASTContext.prototype = Object.create(ProgramContext.prototype);
Program_ASTContext.prototype.constructor = Program_ASTContext;

miniPythonParser.Program_ASTContext = Program_ASTContext;

Program_ASTContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

Program_ASTContext.prototype.EOF = function() {
    return this.getToken(miniPythonParser.EOF, 0);
};

Program_ASTContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(miniPythonParser.NEWLINE);
    } else {
        return this.getToken(miniPythonParser.NEWLINE, i);
    }
};

Program_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterProgram_AST(this);
	}
};

Program_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitProgram_AST(this);
	}
};

Program_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitProgram_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniPythonParser.ProgramContext = ProgramContext;

miniPythonParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, miniPythonParser.RULE_program);
    var _la = 0; // Token type
    try {
        localctx = new Program_ASTContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 65;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===miniPythonParser.NEWLINE) {
            this.state = 62;
            this.match(miniPythonParser.NEWLINE);
            this.state = 67;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 68;
        this.statement();
        this.state = 72;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 3)) & ~0x1f) == 0 && ((1 << (_la - 3)) & ((1 << (miniPythonParser.DEF - 3)) | (1 << (miniPythonParser.LEN - 3)) | (1 << (miniPythonParser.IF - 3)) | (1 << (miniPythonParser.FOR - 3)) | (1 << (miniPythonParser.WHILE - 3)) | (1 << (miniPythonParser.RETURN - 3)) | (1 << (miniPythonParser.PRINT - 3)) | (1 << (miniPythonParser.PIZQ - 3)) | (1 << (miniPythonParser.PCABRIR - 3)) | (1 << (miniPythonParser.ID - 3)) | (1 << (miniPythonParser.INTEGER - 3)) | (1 << (miniPythonParser.STRING - 3)))) !== 0)) {
            this.state = 69;
            this.statement();
            this.state = 74;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 75;
        this.match(miniPythonParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniPythonParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;


 
StatementContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function Statement_functionCallStatemt_ASTContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Statement_functionCallStatemt_ASTContext.prototype = Object.create(StatementContext.prototype);
Statement_functionCallStatemt_ASTContext.prototype.constructor = Statement_functionCallStatemt_ASTContext;

miniPythonParser.Statement_functionCallStatemt_ASTContext = Statement_functionCallStatemt_ASTContext;

Statement_functionCallStatemt_ASTContext.prototype.functionCallStatement = function() {
    return this.getTypedRuleContext(FunctionCallStatementContext,0);
};
Statement_functionCallStatemt_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterStatement_functionCallStatemt_AST(this);
	}
};

Statement_functionCallStatemt_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitStatement_functionCallStatemt_AST(this);
	}
};

Statement_functionCallStatemt_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitStatement_functionCallStatemt_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Statement_whileStament_ASTContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Statement_whileStament_ASTContext.prototype = Object.create(StatementContext.prototype);
Statement_whileStament_ASTContext.prototype.constructor = Statement_whileStament_ASTContext;

miniPythonParser.Statement_whileStament_ASTContext = Statement_whileStament_ASTContext;

Statement_whileStament_ASTContext.prototype.whileStatement = function() {
    return this.getTypedRuleContext(WhileStatementContext,0);
};
Statement_whileStament_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterStatement_whileStament_AST(this);
	}
};

Statement_whileStament_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitStatement_whileStament_AST(this);
	}
};

Statement_whileStament_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitStatement_whileStament_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Statement_DefStatement_ASTContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Statement_DefStatement_ASTContext.prototype = Object.create(StatementContext.prototype);
Statement_DefStatement_ASTContext.prototype.constructor = Statement_DefStatement_ASTContext;

miniPythonParser.Statement_DefStatement_ASTContext = Statement_DefStatement_ASTContext;

Statement_DefStatement_ASTContext.prototype.defStatement = function() {
    return this.getTypedRuleContext(DefStatementContext,0);
};
Statement_DefStatement_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterStatement_DefStatement_AST(this);
	}
};

Statement_DefStatement_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitStatement_DefStatement_AST(this);
	}
};

Statement_DefStatement_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitStatement_DefStatement_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Statement_forStatement_ASTContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Statement_forStatement_ASTContext.prototype = Object.create(StatementContext.prototype);
Statement_forStatement_ASTContext.prototype.constructor = Statement_forStatement_ASTContext;

miniPythonParser.Statement_forStatement_ASTContext = Statement_forStatement_ASTContext;

Statement_forStatement_ASTContext.prototype.forStatement = function() {
    return this.getTypedRuleContext(ForStatementContext,0);
};
Statement_forStatement_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterStatement_forStatement_AST(this);
	}
};

Statement_forStatement_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitStatement_forStatement_AST(this);
	}
};

Statement_forStatement_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitStatement_forStatement_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Statement_asignStatemen_ASTContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Statement_asignStatemen_ASTContext.prototype = Object.create(StatementContext.prototype);
Statement_asignStatemen_ASTContext.prototype.constructor = Statement_asignStatemen_ASTContext;

miniPythonParser.Statement_asignStatemen_ASTContext = Statement_asignStatemen_ASTContext;

Statement_asignStatemen_ASTContext.prototype.assignStatement = function() {
    return this.getTypedRuleContext(AssignStatementContext,0);
};
Statement_asignStatemen_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterStatement_asignStatemen_AST(this);
	}
};

Statement_asignStatemen_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitStatement_asignStatemen_AST(this);
	}
};

Statement_asignStatemen_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitStatement_asignStatemen_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Statement_IfStatement_ASTContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Statement_IfStatement_ASTContext.prototype = Object.create(StatementContext.prototype);
Statement_IfStatement_ASTContext.prototype.constructor = Statement_IfStatement_ASTContext;

miniPythonParser.Statement_IfStatement_ASTContext = Statement_IfStatement_ASTContext;

Statement_IfStatement_ASTContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};
Statement_IfStatement_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterStatement_IfStatement_AST(this);
	}
};

Statement_IfStatement_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitStatement_IfStatement_AST(this);
	}
};

Statement_IfStatement_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitStatement_IfStatement_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Statement_returnStatement_ASTContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Statement_returnStatement_ASTContext.prototype = Object.create(StatementContext.prototype);
Statement_returnStatement_ASTContext.prototype.constructor = Statement_returnStatement_ASTContext;

miniPythonParser.Statement_returnStatement_ASTContext = Statement_returnStatement_ASTContext;

Statement_returnStatement_ASTContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};
Statement_returnStatement_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterStatement_returnStatement_AST(this);
	}
};

Statement_returnStatement_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitStatement_returnStatement_AST(this);
	}
};

Statement_returnStatement_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitStatement_returnStatement_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function Statement_printStatement_ASTContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

Statement_printStatement_ASTContext.prototype = Object.create(StatementContext.prototype);
Statement_printStatement_ASTContext.prototype.constructor = Statement_printStatement_ASTContext;

miniPythonParser.Statement_printStatement_ASTContext = Statement_printStatement_ASTContext;

Statement_printStatement_ASTContext.prototype.printStatement = function() {
    return this.getTypedRuleContext(PrintStatementContext,0);
};
Statement_printStatement_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterStatement_printStatement_AST(this);
	}
};

Statement_printStatement_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitStatement_printStatement_AST(this);
	}
};

Statement_printStatement_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitStatement_printStatement_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniPythonParser.StatementContext = StatementContext;

miniPythonParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, miniPythonParser.RULE_statement);
    try {
        this.state = 85;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            localctx = new Statement_DefStatement_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 77;
            this.defStatement();
            break;

        case 2:
            localctx = new Statement_IfStatement_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 78;
            this.ifStatement();
            break;

        case 3:
            localctx = new Statement_returnStatement_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 79;
            this.returnStatement();
            break;

        case 4:
            localctx = new Statement_printStatement_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 80;
            this.printStatement();
            break;

        case 5:
            localctx = new Statement_whileStament_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 5);
            this.state = 81;
            this.whileStatement();
            break;

        case 6:
            localctx = new Statement_forStatement_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 6);
            this.state = 82;
            this.forStatement();
            break;

        case 7:
            localctx = new Statement_asignStatemen_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 7);
            this.state = 83;
            this.assignStatement();
            break;

        case 8:
            localctx = new Statement_functionCallStatemt_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 8);
            this.state = 84;
            this.functionCallStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DefStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniPythonParser.RULE_defStatement;
    return this;
}

DefStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DefStatementContext.prototype.constructor = DefStatementContext;


 
DefStatementContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function DefStatement_ASTContext(parser, ctx) {
	DefStatementContext.call(this, parser);
    DefStatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DefStatement_ASTContext.prototype = Object.create(DefStatementContext.prototype);
DefStatement_ASTContext.prototype.constructor = DefStatement_ASTContext;

miniPythonParser.DefStatement_ASTContext = DefStatement_ASTContext;

DefStatement_ASTContext.prototype.DEF = function() {
    return this.getToken(miniPythonParser.DEF, 0);
};

DefStatement_ASTContext.prototype.ID = function() {
    return this.getToken(miniPythonParser.ID, 0);
};

DefStatement_ASTContext.prototype.PIZQ = function() {
    return this.getToken(miniPythonParser.PIZQ, 0);
};

DefStatement_ASTContext.prototype.argList = function() {
    return this.getTypedRuleContext(ArgListContext,0);
};

DefStatement_ASTContext.prototype.PDER = function() {
    return this.getToken(miniPythonParser.PDER, 0);
};

DefStatement_ASTContext.prototype.DOSPUNTOS = function() {
    return this.getToken(miniPythonParser.DOSPUNTOS, 0);
};

DefStatement_ASTContext.prototype.sequence = function() {
    return this.getTypedRuleContext(SequenceContext,0);
};
DefStatement_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterDefStatement_AST(this);
	}
};

DefStatement_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitDefStatement_AST(this);
	}
};

DefStatement_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitDefStatement_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniPythonParser.DefStatementContext = DefStatementContext;

miniPythonParser.prototype.defStatement = function() {

    var localctx = new DefStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, miniPythonParser.RULE_defStatement);
    try {
        localctx = new DefStatement_ASTContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this.match(miniPythonParser.DEF);
        this.state = 88;
        this.match(miniPythonParser.ID);
        this.state = 89;
        this.match(miniPythonParser.PIZQ);
        this.state = 90;
        this.argList();
        this.state = 91;
        this.match(miniPythonParser.PDER);
        this.state = 92;
        this.match(miniPythonParser.DOSPUNTOS);
        this.state = 93;
        this.sequence();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ArgListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = miniPythonParser.RULE_argList;
    return this;
}

ArgListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArgListContext.prototype.constructor = ArgListContext;


 
ArgListContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ArgList_Epsylon_ASTContext(parser, ctx) {
	ArgListContext.call(this, parser);
    ArgListContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArgList_Epsylon_ASTContext.prototype = Object.create(ArgListContext.prototype);
ArgList_Epsylon_ASTContext.prototype.constructor = ArgList_Epsylon_ASTContext;

miniPythonParser.ArgList_Epsylon_ASTContext = ArgList_Epsylon_ASTContext;

ArgList_Epsylon_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterArgList_Epsylon_AST(this);
	}
};

ArgList_Epsylon_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitArgList_Epsylon_AST(this);
	}
};

ArgList_Epsylon_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitArgList_Epsylon_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ArgList_ASTContext(parser, ctx) {
	ArgListContext.call(this, parser);
    ArgListContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ArgList_ASTContext.prototype = Object.create(ArgListContext.prototype);
ArgList_ASTContext.prototype.constructor = ArgList_ASTContext;

miniPythonParser.ArgList_ASTContext = ArgList_ASTContext;

ArgList_ASTContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(miniPythonParser.ID);
    } else {
        return this.getToken(miniPythonParser.ID, i);
    }
};


ArgList_ASTContext.prototype.COMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(miniPythonParser.COMA);
    } else {
        return this.getToken(miniPythonParser.COMA, i);
    }
};

ArgList_ASTContext.prototype.enterRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.enterArgList_AST(this);
	}
};

ArgList_ASTContext.prototype.exitRule = function(listener) {
    if(listener instanceof miniPythonParserListener ) {
        listener.exitArgList_AST(this);
	}
};

ArgList_ASTContext.prototype.accept = function(visitor) {
    if ( visitor instanceof miniPythonParserVisitor ) {
        return visitor.visitArgList_AST(this);
    } else {
        return visitor.visitChildren(this);
    }
};



miniPythonParser.ArgListContext = ArgListContext;

miniPythonParser.prototype.argList = function() {

    var localctx = new ArgListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, miniPythonParser.RULE_argList);
    var _la = 0; // Token type
    try {
        this.state = 104;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case miniPythonParser.ID:
            localctx = new ArgList_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 95;
            this.match(miniPythonParser.ID);
            this.state = 100;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===miniPythonParser.COMA) {
                this.state = 96;
                this.match(miniPythonParser.COMA);
                this.state = 97;
                this.match(miniPythonParser.ID);
                this.state = 102;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;
        case miniPythonParser.PDER:
            localctx = new ArgList_Epsylon_ASTContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
